Addition to content

--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera!</title>
+	<title>Coursera Zezzu</title>
 </head>
 <body>
-<h1> This is the first page</h1>
+<h1> Hello! This is the first page for Coursera Zezzu</h1>
+<h2> And this is the second line </h2>
 </body>
 </html>
