--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <h1> Hello! This is the first page for Coursera Zezzu</h1>
-<h2> And this is the second line </h2>
+<h2> And this is the second line of the document </h2>
 </body>
 </html>
